--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "emoji-picker-react": "^3.4.7",
     "firebase": "^8.6.3",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-input-emoji": "^3.1.1",
+    "react-random-image": "^1.0.3",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-horizontal": "^1.6.6",
     "react-social-icons": "^5.4.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
